# pydocs-mcp

./: .gitignore  README.md  pyproject.toml
src/pydocs_mcp/: __init__.py  cli.py  config.py  crawler.py  indexer.py  log.py  mcp_server.py  parser.py  search.py  storage.py
src/pydocs_mcp/data/: __init__.py  sources.yaml
